refactor: toList 사용으로 코드 스타일 통일
Co-authored-by: gemini-code-assist[bot] <176961590+gemini-code-assist[bot]@users.noreply.github.com>